--- a/myblog.css
+++ b/myblog.css
@@ -212,6 +212,7 @@ input {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  padding-bottom: 100px;
 }
 
 .cardBody {
@@ -491,7 +492,7 @@ li a {
   display: block;
   color: var(--secondary-color);
   text-align: center;
-  padding: 14px 16px;
+  padding: 0 16px;
   text-decoration: none;
 }
 
@@ -508,7 +509,9 @@ li a {
   --secondary-color: gainsboro;
 }
 
-
+body {
+  background-color: var(--primary-color);
+}
 
 footer {
   position: fixed;
