--- a/style.css
+++ b/style.css
@@ -142,6 +142,7 @@ footer {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  padding-bottom: 100px;
 }
 
 .cardBody {
